  implementing the HMM-HMM Viterbi alingment in SSE2 SIMD (single input 
  multiple data) instructions 

* Added section to hhsuite user guide on 
  - how to efficiently run hhblits, in particular on a cluster
  - how to modify or extend existing databases
  - how to visually check multiple sequence alignments
  - troubleshooting


_______________________________________________________________________________

HH-suite 2.0.16  February 2013

* Added options to hhblitsdb.pl for adding (-a) and removing (-r) files 
  from HH-suite database. Updeated help list and did stdin and stdout fixes.

* Added options -i stdin and -o stdout to cstranslate to read from stdin and 
  write to stdout.

* hhblits: Fixed -i stdin, -oa3m stdout and -v 0.

* hhsearch/hhalign: Fixed small bug that removed all sequences from output 
  alignment when trying to use append.

* Set default number of threads to 2 for HHblits. (Before, prefiltering was 
  done with 2 threads, but HMM-HMM comparison with only 1.)

* Improved error messages for memory problems

* Removed bug in hhblits that would skip realignment of first three hits if 
  their E-value was above the one given by -e <Evalue>
  
* Removed bug in filtering with -neff option that led to a single sequence 
  if -neff target value was within 0.01 of input MSA Neff value; implemented
  speed up for -neff filtering. 

* Removed bug that led to occasional segementation faults with the -atab option


_______________________________________________________________________________

HH-suite 2.0.15  June 2012

* Fixed a bug in the counting of the number of sequences found.

* Removed a regression in -nodiff option: sequences in query MSA were filtered by
  normal, active filters such as -diff and -id. Only db MSAs were not filtered.

* Fix hhalign regression introduced in 2.0.14.

* Removed a regression that read sequences from query HHM or <query>.a3m even 
  when a sequence file query.seq was given.
